--- a/sportsio/templates/user_side/order_checkout.html
+++ b/sportsio/templates/user_side/order_checkout.html
@@ -341,7 +341,7 @@
                         "key": "rzp_test_VArbI2Nu4Yi1Iw", // Replace with your Razorpay Key ID
                         "amount": totalAmount * 100, // Amount is in currency subunits. Convert to paisa
                         "currency": "INR",
-                        "name": "QickMart", // Your business name
+                        "name": "Sportsio", // Your business name
                         "description": "Test Transaction",
                         "image": "", // URL of your business logo
                         "callback_url": "{% url 'user_profile:razorpay_callback' %}",
