--- a/sportsio/templates/admin_side/order_management.html
+++ b/sportsio/templates/admin_side/order_management.html
@@ -26,11 +26,12 @@
         vertical-align: middle;
     }
     .btn-action {
+        margin-top:3px;
         margin-bottom: 5px;
         border: none;
         font-size:12px;
         padding: 5px 5px;
-        border-radius: 20px;
+        border-radius: 2px;
         transition: all 0.3s ease;
         margin-left:5px;
     }
@@ -39,7 +40,7 @@
     select.form-control {
         border: none;
         padding: 5px 10px;
-        border-radius: 20px;
+        border-radius: 2px;
         background-color: #f1f1f1;
     }
     #floating-nav {
@@ -134,6 +135,9 @@
                             <a href="{% url 'refund_order' order.id %}" class="btn btn-action btn-primary">Refund</a>
                             {% elif order.status == "Return" or order.status == "Cancelled" or order.status == "Refunded" %}
                             <span>Return and Refunded</span>
+                            {% elif order.status == "Cancellation Requested"%}
+                            <span>Cancellation Request</span>
+                            <a href="{% url 'cancel_order' order.id %}" class="btn btn-action btn-primary">Approve</a>
                             {% else %}
                             <a href="{% url 'update_order_details' order.id %}" class="btn btn-action btn-primary">Update</a>
                             {% endif %}
