--- a/sportsio/templates/registration/login.html
+++ b/sportsio/templates/registration/login.html
@@ -11,11 +11,29 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
+    <style>
+    
+    #message-container {
+        padding: 10px;
+        
+        border-radius: 5px;
+        text-align: center;
+        color:green;
+    }
+    </style>
     <div class="col-lg-14 col-md-14 form-container">
+      
         <div class="col-lg-4 col-md-12 col-sm-9 col-xs-12 form-box text-center">
             <div class="logo mb-2">
                 <img src="{% static 'assets/admin_side/images/logos/dark-logo.png' %}" width="150px">
             </div>
+            {% if messages%}
+            {% for message in messages%}
+            <div id="message-container">
+                <p>{{ message }}</p>
+            </div>
+            {%endfor%}
+            {% endif %}
             <div class="heading mb-3">
                 <h4>Login into your account</h4>
             </div>
