--- a/sportsio/static/assets/user_side/css/plugins/slick.css
+++ b/sportsio/static/assets/user_side/css/plugins/slick.css
@@ -1,10 +1,11 @@
 /* Slider */
 .slick-slider
 {
-    position: relative;
 
+    object-fit:contain;
     display: block;
     box-sizing: border-box;
+    position: relative;
 
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -78,6 +79,7 @@
 {
     display: none;
     float: left;
+    position: relative;
 
     height: 100%;
     min-height: 1px;
@@ -88,6 +90,11 @@
 }
 .slick-slide img
 {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This keeps the aspect ratio and covers the container */
+    object-position: center;
+    
     display: block;
 }
 .slick-slide.slick-loading img
