--- a/sportsio/templates/404.html
+++ b/sportsio/templates/404.html
@@ -11,14 +11,9 @@
                     <p class="short_desc">Sorry but the page you are looking for does not exist, have been
                         removed, name
                         changed or is temporarily unavailable.</p>
-                    <form action="javascript:void(0)" class="error-form">
-                        <div class="inner-error_form">
-                            <input type="text" placeholder="Search..." class="error-input-text">
-                            <button type="submit" class="error-search_btn"><i class="fa fa-search"></i></button>
-                        </div>
-                    </form>
+                
                     <div class="uren-btn-ps_center"></div>
-                    <a href="index.html" class="uren-error_btn">Back To Home Page</a>
+                    <a href="{% url 'home' %}" class="uren-error_btn">Back To Home Page</a>
                 </div>
             </div>
         </div>
